--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header" class="disable-text-selection">
         <div class="container">
             <nav>
-                <img src="/image/logo.jpg" class="logo">
+                <img src="logo.jpg" class="logo">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -41,7 +41,7 @@
     <div class="about-me">
     <div class="row">
         <div class="col_1">
-        <img src="image/avatar.jpg" class="user">
+        <img src="avatar.jpg" class="user">
         </div>
         <div class="col_2">
         <h1 class="sub-about">About Me</h1>
@@ -81,19 +81,19 @@
         <center><h1>My Activities</h1></center>
             <div class="slide">
                 <div class="slideshow">
-                    <img src="image/pic1.png" alt="" style="width: 800px; height: 500px;">
+                    <img src="pic1.png" alt="" style="width: 800px; height: 500px;">
                 </div>
 
                 <div class="slideshow">
-                    <img src="image/pic2.png" alt="" style="width: 800px; height: 500px;">
+                    <img src="pic2.png" alt="" style="width: 800px; height: 500px;">
                 </div>
 
                 <div class="slideshow">
-                    <img src="image/pic3.png" alt="" style="width: 800px; height: 500px;">
+                    <img src="pic3.png" alt="" style="width: 800px; height: 500px;">
                 </div>
 
                 <div class="slideshow">
-                    <img src="image/pic4.jpg" alt="" style="width: 800px; height: 500px;">
+                    <img src="pic4.jpg" alt="" style="width: 800px; height: 500px;">
                 </div>
                 <button class="button-display-left" onclick="plusDivs(-1)">&#10094;</button>
                 <button class="button-display-right" onclick="plusDivs(+1)">&#10095;</button>
