--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div id="header" class="disable-text-selection">
         <div class="container">
             <nav>
-                <img src="/image/logo.jpg" class="logo">
+                <img src="image/logo.jpg" class="logo">
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
