--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device_width, initial-scale=1.0">
     <title>Mon's Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <style>
     .disable-text-selection {
@@ -27,8 +28,8 @@
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#activity">Activities</a></li>
-                    <li><a href="#hobbies">Hobbies</a></li>
                     <li><a href="#contact">Contact me</a></li>
+                    <li></a><a href="image/cv.pdf" download="Hai Minh's CV.pdf" class="btn btn-primary">Download CV</a></li>
                 </ul>
             </nav>
         <div class="header-text">
@@ -37,6 +38,7 @@
         </div>
         </div>      
     </div>
+
 <div id="about" class="disable-text-selection">
     <div class="about-me">
     <div class="row">
@@ -77,6 +79,9 @@
         </div>
     </div>
 </div>
+</div>
+</div>
+
 <div id="activity" class="disable-text-selection">
         <center><h1>My Activities</h1></center>
             <div class="slide">
@@ -95,10 +100,26 @@
                 <div class="slideshow">
                     <img src="image/pic4.jpg" alt="" style="width: 800px; height: 500px;">
                 </div>
-                <button class="button-display-left" onclick="plusDivs(-1)">&#10094;</button>
-                <button class="button-display-right" onclick="plusDivs(+1)">&#10095;</button>
+                <button class="button-display-left" onclick="plusDivs(-1)">&#10094</button>
+                <button class="button-display-right" onclick="plusDivs(+1)">&#10095</button>
             </div>
         </div>
+</div>
+
+<div id="contact" class="disable-text-selection">
+    <div class="container">
+        <div class="row0">
+            <div class="contact-left">
+                 <h1 class="titles">Contact Me</h1>
+            </div>
+                <p>phminh2105@gmail.com</p>
+                <p>+84 865 790 796</p>
+                <div class="social-icon">
+                    <a href="https://www.facebook.com/mmon.69/"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                    <a href=""><i class="fa fa-instagram" aria-hidden="true"></i></a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <script type="text/javascript">
